--- a/bg.services/package.json
+++ b/bg.services/package.json
@@ -28,5 +28,8 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.3",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.8"
   }
 }
